Adds /fips-data endpoint
